fixed generic page alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3212,6 +3212,7 @@ input, select, textarea {
 	}
 
 		.wrapper > .inner {
+			margin: auto;
 			padding: 5em 5em 3em 5em ;
 			max-width: 100%;
 			width: 75em;
